fixes to map to copyright sets are visible and web page header is smaller, because it is tooo big in small screens

--- a/client/src/styles/map.css
+++ b/client/src/styles/map.css
@@ -1,5 +1,7 @@
 .full {
-  height: 100vh;
+  height: calc(100vh - 70px);
+  top: 0;
+  position: absolute;
   width: 99.5vw;
   margin-bottom: auto;
 }
