--- a/client/src/styles/navigationbar.css
+++ b/client/src/styles/navigationbar.css
@@ -79,8 +79,8 @@
   Align:center;
 }
 .nav-bar-title {
-  font-size: 2.0rem;
+  font-size: 1.45em;
 }
 .header{
-  font-size: 1.5em;
+  font-size: 1.45em;
 }
